src/objects/EBSActionConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>C0115</description>
    <fields>
        <fullName>APIField__c</fullName>
        <description>C0115</description>
        <label>APIField</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataDirection__c</fullName>
        <description>C0115</description>
        <label>DataDirection</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataLabel__c</fullName>
        <description>C0115</description>
        <label>DataLabel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <description>C0115</description>
        <label>DataType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBSActionType__c</fullName>
        <description>C0115</description>
        <label>EBSActionType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>EBS Action Type Config</label>
</CustomObject>